Properly access the system's GTK settings

BUG: 382291